--- a/style.css
+++ b/style.css
@@ -43,9 +43,10 @@
 body {
     font-size: 15px;
     font-family: 'Inter';
-    margin: 0;
+    max-width: 1144px;
+    padding: 1em;
+    margin-inline: auto;
 }
-
 
 
 p{
@@ -64,12 +65,6 @@ img {
 
 .hidden{
     display: none;
-}
-
-.wrapper{
-    max-width: 1144px;
-    padding: 1em;
-    margin-inline: auto;
 }
 
 main {
@@ -115,7 +110,7 @@ ul, ol{
     font-weight: 700;
 }
 
-.new article:not(:last-of-type) {
+.new li:not(:last-of-type) {
     padding-block-end: 1.25em;
 }
 
@@ -127,7 +122,7 @@ ul, ol{
     color: var(--soft-orange);
 }
 
-.new article:nth-of-type(even){
+.new li:nth-of-type(even){
     border-block-color: var(--dark-grayish-blue);
     border-block-width: 1px;
     border-block-style: solid;
@@ -154,11 +149,19 @@ ul, ol{
     }
 }
 
+body.with-overlay{
+    width: 100vw;
+    height: 100vh;
+    margin: 0;
+    overflow: hidden;
+}
+
 body.with-overlay::before{
     content: '';
     background-color: rgba(0,0,0,.25);
     position: absolute;
     top: 0;
+    left: 0;
     width: 100vw;
     height: 100vh;
 }
@@ -166,19 +169,7 @@ body.with-overlay::before{
 .menu-btn{
     border: none;
     background-color: transparent;
-}
-
-nav{
-    background-color: var(--off-white);
-    min-height: 100vh;
-    position: absolute;
-    right: 0;
-    top: 0;
-    display: flex;
-    flex-direction: column;
-    width: var(--menu-width);
-    padding-block: 1rem;
-    gap: 1rem;
+    z-index: 1;
 }
 
 a:hover, a:focus-visible{
@@ -298,23 +289,47 @@ a.button:hover, a.button:focus-visible{
     }
 }
 
-nav{
-    visibility: collapse;
-    padding-inline: 1em;
-}
-
-nav .menu-btn{
-    align-self: end;
-    position: absolute;
-}
-
 .menu-btn[aria-expanded=true] + nav{
     visibility: visible;
+}
+
+.menu-btn[aria-expanded=true] .menu-open{
+    display: none;
+}
+
+.menu-btn[aria-expanded=false] .menu-close{
+    display: none;
+}
+
+nav{
+    background-color: var(--off-white);
+    min-height: 100vh;
+    position: absolute;
+    right: 0;
+    top: 0;
+    width: var(--menu-width);
+    padding-block: 1rem;
+    visibility: collapse;
+}
+
+nav ul{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    padding-inline: 1em;
 }
 
 @media screen and (min-width: 40rem){
     nav{
         visibility: visible;
+        min-height: initial;
+        position: initial;
+        width: initial;
+    }
+
+    nav ul{
+        flex-direction: row;
+        gap: 2.5em;
     }
 
     .menu-btn{
